syntax = "proto3";

option csharp_namespace = "Meetup.Notifications.Queries.Contracts.V1";

package meetup.notifications;

service NotificationsQueries{
  rpc Get(GetNotificationRequest) returns (GetNotificationRequest.GeNotificationReply);
}

message GetNotificationRequest{
  string user_id = 1;
  message GeNotificationReply{
    repeated Notification notifications = 1;
  }
  message Notification{
    string notification_id = 1;
    string notification_type = 2;
    string group_id = 3;
    string meetup_id = 4;
    string member_id = 5;
    string message = 6;
  }
}

